--- a/style.css
+++ b/style.css
@@ -45,6 +45,10 @@ body{
     height: 438px;
     margin: 153px 141px 86px 102px;
 }
+.head-section:hover .top-img{
+    transform: rotate(180deg);
+    transition: transform 2s ease-in-out;
+}
 /* main section style */
 .blogs{
     display: grid;
